--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <!--navbar-->
         <div class="topnav" id="myTopnav">
-            <a href="#" class="active navbar-brand"><img src="pict/icon.png" style= "width: 60%;"></a>
+            <a href="#" class="active navbar-brand"><img src="pict/icon.png" style= "width: 80%;"></a>
             <a href="progresso.html">Progresso</a>
             <div class="dropdown">
                 <button class="dropbtn">Disciplinas 
@@ -31,16 +31,34 @@
             <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
         </div>
         <!--corpo da home-->
-        <div class="row">
-            <div class="column">1</div>
-            <div class="column">2</div>
+        <div class="corpo">
+            <br><br>
+            <div class="row">
+                <div class="column">
+                    <h2>Column 1</h2>
+                    <p>Some text..</p>
+                </div>
+                <div class="column">
+                    <h2>Column 2</h2>
+                    <p>Some text..</p>
+                </div>
+                <div class="column">
+                    <h2>Column 3</h2>
+                    <p>Some text..</p>
+                </div>
+                <div class="column">
+                    <h2>Column 4</h2>
+                    <p>Some text..</p>
+                </div>
+            </div>
+            <div class="column" style="background-color:#81BEF7;width:100%;">
+                <h2>Column 1</h2>
+                <p>Some text..</p>
+            </div>
         </div>
-        <div class="row">
-            <div class="column">1</div>
-            <div class="column">2</div>
-        </div>
-        <div class="row">
-            <div class="column">5</div>
+        <!--rodapé-->
+        <div class="roda">
+
         </div>
     </div>
     <script src="js/nav.js"></script>
