--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <!--navbar-->
         <div class="topnav" id="myTopnav">
-            <a href="#" class="active navbar-brand"><img src="pict/icon.png" style= "width: 80%;"></a>
+            <a href="index.html" class="navbar-brand"><img src="pict/icon.png" style= "width: 100%;"></a>
             <a href="progresso.html">Progresso</a>
             <div class="dropdown">
                 <button class="dropbtn">Disciplinas 
