--- a/progresso.html
+++ b/progresso.html
@@ -11,7 +11,7 @@
     <div class="container">
         <!--navbar-->
         <div class="topnav" id="myTopnav">
-            <a href="index.html" class="navbar-brand"><img src="pict/icon.png" style= "width: 80%;"></a>
+            <a href="index.html" class="navbar-brand"><img src="pict/icon.png" style= "width: 100%;"></a>
             <a href="#" class="active">Progresso</a>
             <div class="dropdown">
                 <button class="dropbtn">Disciplinas 
@@ -30,37 +30,31 @@
             <a href="perfil.html">Perfil</a> 
             <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
         </div>
-        <!--corpo da home-->
-        <br><br><br><br>
-        <div class="dropdown">
-            <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                Disciplinas
-                <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                <li><a href="#" class="active">Matemática 2</a></li>
-                <li><a href="#">Engenharia de Software</a></li>
-                <li><a href="#">Biologia 1</a></li>
-                <li><a href="#">Química 2</a></li>
-            </ul>
+        <div class="corpo">
+
         </div>
-        <!--gráfico-->
-        <div class="pieContainer" id="grafico">
-            <div class="pieBackground"></div>
-            <div id="pieSlice1" class="hold"><div class="pie"></div></div>
-            <div id="pieSlice2" class="hold"><div class="pie"></div></div>
+        <!--corpo da página-->
+        <!-- <br><br><br><br>
+        <h2>Para ver o conteúdo selecione uma disciplina</h2>
+        <select id="country" name="country">
+            <option value="none">Clique para escolher</option>
+            <option value="mt3">Matemática 3</option>
+            <option value="es">Engenharia de Software</option>
+            <option value="f4">Física 4</option>
+            <option value="bd">Banco de Dados</option>
+        </select>
+        gráfico-->
+        <div class="pieContainer" style="background-color:#EFFBFB; width:100%;">
+            <div class="pieBackground">
+                <div id="pieSlice1" class="hold"><div class="pie"></div></div>
+                <div id="pieSlice2" class="hold"><div class="pie"></div></div>
+            </div>
         </div>
-        <div class="nota">
-            <h1>Notas: 7,3</h1>
-            <img src="Imagens/graf.png" width="90%" height="90%" id="grafico" class="image-responsive">
-        </div>
-        <!--Tirar o "espaço" entre a frequencia e a nota-->
-        <div class="freq">
-            <h1>Frequência</h1>
-            <div class="progress">
-                <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="83" aria-valuemin="0" aria-valuemax="100" style="width: 83%">
-                    83%<span class="sr-only">83% Complete</span>
-                </div>
+        <!--Progresso-->
+        <div class="pros">
+            <h2>Presenças</h2>
+            <div id="myProgress">
+                <div id="myBar">%</div>
             </div>
         </div>
     </div>  
