--- a/cadastro2.html
+++ b/cadastro2.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/circle.css">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">   
     <title>Study Life</title>
 </head>
 <body>
@@ -34,42 +33,29 @@
             <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
         </div>
         <!--corpo da home-->
-        <div class="corpo w3-container">
-            <h2 style="text-align:center">Física 4</h2>
-
-            <h2>Frequência</h2>
+        <div class="corpo">
+            <h2 style="text-align:center">Cadastro</h2>
             <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-container w3-blue w3-round-xlarge" style="width:37%">37%</div>
+                <div class="w3-container w3-blue w3-round-xlarge" style="width:53%">53%</div>
             </div>
             <br>
-            <h2>Dados</h2>
-            <div>
-                <div class="column discnome" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
-                    <h3>Nome</h3>
-                    <h4>Física 4</h4>
-                </div>
-            </div>
-            <div>
-                <div class="column discsigla" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
-                    <h3>Sigla</h3>
-                    <h4>Fis4</h4>
-                </div>
-            </div>
-            <div>
-                <div class="column discprof" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
-                    <h3>Professor(a)</h3>
-                    <h4>Camila Gomes</h4>
-                </div>
-            </div>
-            <div>
-                <div class="column discsala" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
-                    <h3>Sala</h3>
-                    <h4>408</h4>
+            <label for="">Escolaridade</label>
+            <input type="text" placeholder="Série"><br><br>
+            <label for="">Instituição</label>
+            <input type="text" placeholder="Nome da instituição"><br><br>
+            <label for="">Curso</label>
+            <input type="text" placeholder="Nome do curso"><br><br>
+            <label for="">Cidade</label>
+            <input type="text" placeholder="Cidade"><br><br>
+            <label for="">Estado civil</label>
+            <input type="text" placeholder="Ex: solteiro, casado, etc."><br><br>
+            <br><br>
+            <div style="display:flex;text-align:center;">
+                <div>
+                    <a href="cadastro3.html" class="w3-btn" style="background-color:#81BEF7;float:right;">Continuar</a>
                 </div>
             </div>
         </div>
-        <br>
-        <div style="text-align:center"><a href="matedit.html" class="w3-btn" style="background-color:#81BEF7">Editar</a></div>
     </div>
     <script src="js/nav.js"></script>
 </body>
