--- a/hora.html
+++ b/hora.html
@@ -4,30 +4,145 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/table.css">
+    <title>Study Life</title>
 </head>
 <body>
-            <!--navbar-->
-            <div class="topnav" id="myTopnav">
-                    <a href="index.html" class="navbar-brand"><img src="pict/icon.png" style= "width: 100%;"></a>
-                    <a href="progresso.html">Progresso</a>
-                    <div class="dropdown">
-                        <button class="dropbtn">Disciplinas 
-                            <i class="fa fa-caret-down"></i>
-                        </button>
-                        <div class="dropdown-content">
-                            <a href="mt3.html">Matemática 3</a>
-                            <a href="es.html" >Engenharia de Software</a>
-                            <a href="f4.html">Física 4</a>
-                            <a href="bd.html">Banco de Dados</a>
-                        </div>
-                    </div>
-                    <a href="tarefas.html">Tarefas</a>
-                    <a href="hora.html">Horários</a>
-                    <a href="material.html">Material</a>
-                    <a href="perfil.html">Perfil</a> 
-                    <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+    <div class="container">
+        <!--navbar-->
+        <div class="topnav" id="myTopnav">
+            <a href="index.html" class="navbar-brand"><img src="pict/icon.png" style= "width: 100%;"></a>
+            <a href="index.html">Home</a>
+            <div class="dropdown">
+                <button class="dropbtn">Disciplinas 
+                    <i class="fa fa-caret-down"></i>
+                </button>
+                <div class="dropdown-content">
+                    <a href="mt3.html">Matemática 3</a>
+                    <a href="es.html" >Engenharia de Software</a>
+                    <a href="f4.html">Física 4</a>
+                    <a href="bd.html">Banco de Dados</a>
                 </div>
-                <!--corpo da home-->
+            </div>
+            <a href="progresso.html">Progresso</a>
+            <a href="tarefas.html">Tarefas</a>
+            <a href="hora.html">Horários</a>
+            <a href="material.html">Material</a>
+            <a href="perfil.html">Perfil</a> 
+            <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+        </div>
+        <!--corpo da home-->
+        <div class="corpo">
+            <br><h2 style="text-align:center;">Cronograma semanal</h2><br>
+            <table id="lugares">
+                <caption><h2>Manhã</h2></caption><br>
+                <thead>
+                    <tr><!--Cabeçalho-->
+                        <td class="dia">Seg</td>
+                        <td class="dia">Ter</td>
+                        <td class="dia">Qua</td>
+                        <td class="dia">Qui</td>
+                        <td class="dia">Sex</td>
+                        <td class="dia">Sáb</td>
+                        <td class="dia">Dom</td>
+                    </tr>
+                </thead>
+                <!--Manhã-->
+                    <tr>
+                        <td class="hora f4">Físc4</td>
+                        <td class="hora"></td>
+                        <td class="hora dbo">DBO</td>
+                        <td class="hora"></td>
+                        <td class="hora"></td>
+                        <td class="hora"></td>
+                        <td class="hora"></td>
+                    </tr>
+                    <tr>
+                        <td class="hora f4">Físc4</td>
+                        <td class="hora"></td>
+                        <td class="hora dbo">DBO</td>
+                        <td class="hora"></td>
+                        <td class="hora"></td>
+                        <td class="hora"></td>
+                        <td class="hora"></td>
+                    </tr>
+                    <tr>
+                        <td class="hora"></td>
+                        <td class="hora"></td>
+                        <td class="hora dbo">DBO</td>
+                        <td class="hora"></td>
+                        <td class="hora"></td>
+                        <td class="hora"></td>
+                        <td class="hora"></td>
+                    </tr>
+                    <tr>
+                        <td class="hora edf3">Ed.Fís3</td>
+                        <td class="hora"></td>
+                        <td class="hora dbo">DBO</td>
+                        <td class="hora edf3">Ed.Fís3</td>
+                        <td class="hora"></td>
+                        <td class="hora"></td>
+                        <td class="hora"></td>
+                    </tr>
+                </tbody>
+            </table>
+            <br><br>
+            <table id="lugares">
+                <caption><h2>Tarde</h2></caption><br>
+                <thead>
+                    <tr><!--Cabeçalho-->
+                        <td class="dia">Seg</td>
+                        <td class="dia">Ter</td>
+                        <td class="dia">Qua</td>
+                        <td class="dia">Qui</td>
+                        <td class="dia">Sex</td>
+                        <td class="dia">Sáb</td>
+                        <td class="dia">Dom</td>
+                    </tr>
+                </thead>
+                <!--Tarde-->
+                <tbody>
+                    <tr>
+                        <td class="hora pt">Port3</td>
+                        <td class="hora es">Eng.S</td>
+                        <td class="hora mat">Mate3</td>
+                        <td class="hora bd">Banco</td>
+                        <td class="hora bd">Banco</td>
+                        <td class="hora"></td>
+                        <td class="hora"></td>
+                    </tr>
+                    <tr>
+                        <td class="hora pt">Port3</td>
+                        <td class="hora es">Eng.S</td>
+                        <td class="hora mat">Mate3</td>
+                        <td class="hora bd">Banco</td>
+                        <td class="hora bd">Banco</td>
+                        <td class="hora"></td>
+                        <td class="hora"></td>
+                    </tr>
+                    <tr>
+                        <td class="hora quim">Quim2</td>
+                        <td class="hora es">Eng.S</td>
+                        <td class="hora bio">Biol1</td>
+                        <td class="hora hist">Hist2</td>
+                        <td class="hora filo">Filo3</td>
+                        <td class="hora"></td>
+                        <td class="hora"></td>
+                    </tr>
+                    <tr>
+                        <td class="hora quim">Quim2</td>
+                        <td class="hora"></td>
+                        <td class="hora bio">Biol1</td>
+                        <td class="hora geo">Geog2</td>
+                        <td class="hora socio">Soci3</td>
+                        <td class="hora"></td>
+                        <td class="hora"></td>
+                    </tr>
+                </tbody>
+            </table>        
+        </div>
+    </div>
+    <script src="js/nav.js"></script>
 </body>
 </html>
