--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!--navbar-->
         <div class="topnav" id="myTopnav">
             <a href="index.html" class="navbar-brand"><img src="pict/icon.png" style= "width: 100%;"></a>
-            <a href="progresso.html">Progresso</a>
+            <a href="index.html">Home</a>
             <div class="dropdown">
                 <button class="dropbtn">Disciplinas 
                     <i class="fa fa-caret-down"></i>
@@ -24,6 +24,7 @@
                     <a href="bd.html">Banco de Dados</a>
                 </div>
             </div>
+            <a href="progresso.html">Progresso</a>
             <a href="tarefas.html">Tarefas</a>
             <a href="hora.html">Horários</a>
             <a href="material.html">Material</a>
@@ -34,31 +35,29 @@
         <div class="corpo">
             <br><br>
             <div class="row">
-                <div class="column">
-                    <h2>Column 1</h2>
-                    <p>Some text..</p>
-                </div>
-                <div class="column">
-                    <h2>Column 2</h2>
-                    <p>Some text..</p>
-                </div>
-                <div class="column">
-                    <h2>Column 3</h2>
-                    <p>Some text..</p>
-                </div>
-                <div class="column">
-                    <h2>Column 4</h2>
-                    <p>Some text..</p>
-                </div>
+                <a href="lista.html"><div class="column">
+                    <h2>Minhas matérias</h2>
+                    <p>Veja aqui suas matérias</p>
+                </div></a>
+                <a href="progresso.html"><div class="column">
+                    <h2>Meu progresso</h2>
+                    <p>Não perca seu desempenho, consulte seu progresso</p>
+                </div></a>
+                <a href="tarefas.html"><div class="column">
+                    <h2>Tarefas</h2>
+                    <p>Perdido nos trabalhos? Aqui você não se perde</p>
+                </div></a>
+                <a href="hora.html"><div class="column">
+                    <h2>Horários</h2>
+                    <p>Não leve mais o caderno errado, consulte seu horário</p>
+                </div></a>
             </div>
-            <div class="column" style="background-color:#81BEF7;width:100%;">
-                <h2>Column 1</h2>
-                <p>Some text..</p>
-            </div>
-        </div>
-        <!--rodapé-->
-        <div class="roda">
-
+        <div>
+            <div style="margin-left:25%; margin-right:25%"><a href="material.html"><div class="column" style="background-color:#81BEF7;width:100%;">
+                    <h2>Galeria</h2>
+                    <p>Salve aqui as fotos de matérias e anotações</p>
+                </div></a></div>
+                <br><br>
         </div>
     </div>
     <script src="js/nav.js"></script>
