--- a/matedit.html
+++ b/matedit.html
@@ -35,41 +35,44 @@
         </div>
         <!--corpo da home-->
         <div class="corpo w3-container">
-            <h2 style="text-align:center">Física 4</h2>
+            <h2 style="text-align:center">--</h2>
 
             <h2>Frequência</h2>
+            <label for="">Registre faltas</label>
+            <input type="date" name="" id="">
+            <br><br>
             <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-container w3-blue w3-round-xlarge" style="width:37%">37%</div>
+                <div class="w3-container w3-blue w3-round-xlarge" style="width:100%">.</div>
             </div>
             <br>
             <h2>Dados</h2>
             <div>
-                <div class="column discnome" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
-                    <h3>Nome</h3>
-                    <h4>Física 4</h4>
+                <div class="column discnome" style="background-color:lightgray;width:100%;text-align:left;height:60px;">
+                    <label for="">Nome</label>
+                    <input type="text">
                 </div>
             </div>
             <div>
-                <div class="column discsigla" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
-                    <h3>Sigla</h3>
-                    <h4>Fis4</h4>
+                <div class="column discsigla" style="background-color:lightgray;width:100%;text-align:left;height:60px;">
+                    <label for="">Sigla</label>
+                    <input type="text">
                 </div>
             </div>
             <div>
-                <div class="column discprof" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
-                    <h3>Professor(a)</h3>
-                    <h4>Camila Gomes</h4>
+                <div class="column discprof" style="background-color:lightgray;width:100%;text-align:left;height:60px;">
+                    <label for="">Professor(a)</label>
+                    <input type="text">
                 </div>
             </div>
             <div>
-                <div class="column discsala" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
-                    <h3>Sala</h3>
-                    <h4>408</h4>
+                <div class="column discsala" style="background-color:lightgray;width:100%;text-align:left;height:60px;">
+                    <label for="">Sala</label>
+                    <input type="text">
                 </div>
             </div>
         </div>
         <br>
-        <div style="text-align:center"><a href="matedit.html" class="w3-btn" style="background-color:#81BEF7">Editar</a></div>
+        <div style="text-align:center"><a href="list.html" class="w3-btn" style="background-color:#084B60; color:white">Salvar</a></div>
     </div>
     <script src="js/nav.js"></script>
 </body>
