--- a/mensagem.html
+++ b/mensagem.html
@@ -42,19 +42,14 @@
                     </center>
                     </div>
                     <center>
-                        <h3>Entre em sua conta</h3>
-                        <label for="">User</label>
-                        <input type="text" placeholder="username">
+                        <h3>Cadastro feito com sucesso!</h3>
                         <br><br>
-                        <label for="">Password</label>
-                        <input type="password" placeholder="password">
-                        <br>
                         <div style="display:flex;text-align:center;">
                             <div>
-                                <a href="perfilp.html" class="w3-btn" style="background-color:#084B60;color:white;">Entrar</a>
+                                <a href="index.html" class="w3-btn" style="background-color:#084B60;color:white;">Voltar à Home</a>
                             </div>
                             <div>
-                                <a href="cadastro.html" class="w3-btn" style="background-color:#81BEF7;float:right;">Cadastre-se</a>
+                                <a href="perfilp.html" class="w3-btn" style="background-color:#81BEF7;float:right;">Ver meus dados</a>
                             </div>
                         </div>
                     </center>
