--- a/progresso.html
+++ b/progresso.html
@@ -12,7 +12,7 @@
         <!--navbar-->
         <div class="topnav" id="myTopnav">
             <a href="index.html" class="navbar-brand"><img src="pict/icon.png" style= "width: 100%;"></a>
-            <a href="#" class="active">Progresso</a>
+            <a href="index.html">Home</a>
             <div class="dropdown">
                 <button class="dropbtn">Disciplinas 
                     <i class="fa fa-caret-down"></i>
@@ -24,6 +24,7 @@
                     <a href="bd.html">Banco de Dados</a>
                 </div>
             </div>
+            <a href="progresso.html">Progresso</a>
             <a href="tarefas.html">Tarefas</a>
             <a href="hora.html">Horários</a>
             <a href="material.html">Material</a>
@@ -31,32 +32,52 @@
             <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
         </div>
         <div class="corpo">
-
-        </div>
-        <!--corpo da página-->
-        <!-- <br><br><br><br>
-        <h2>Para ver o conteúdo selecione uma disciplina</h2>
-        <select id="country" name="country">
-            <option value="none">Clique para escolher</option>
-            <option value="mt3">Matemática 3</option>
-            <option value="es">Engenharia de Software</option>
-            <option value="f4">Física 4</option>
-            <option value="bd">Banco de Dados</option>
-        </select>
-        gráfico-->
-        <div class="pieContainer" style="background-color:#EFFBFB; width:100%;">
-            <div class="pieBackground">
-                <div id="pieSlice1" class="hold"><div class="pie"></div></div>
-                <div id="pieSlice2" class="hold"><div class="pie"></div></div>
+            <h2>Matérias cadastradas</h2>
+            <h3>4</h3>
+            <br>
+            <h2>Frequência global</h2>
+            <br>
+            <div class="pieContainer" style="background-color:#EFFBFB; width:100%;">
+                <div class="pieBackground">
+                    <div id="pieSlice1" class="hold"><div class="pie"></div></div>
+                    <div id="pieSlice2" class="hold"><div class="pie"></div></div>
+                </div>
             </div>
-        </div>
-        <!--Progresso-->
-        <div class="pros">
-            <h2>Presenças</h2>
-            <div id="myProgress">
-                <div id="myBar">%</div>
-            </div>
+            <br>
+            <!--Progresso-->
+            <h2>Desempenho</h2>
+            <table class="desempenho">
+                <thead>
+                    <tr>
+                        <td class="tit">Matéria</td>
+                        <td class="tit">Nota</td>
+                        <td class="tit">Frequência</td>
+                    </tr>
+                </thead>
+                    <tr>
+                        <td class="cont">Matemática 3</td>
+                        <td class="cont">7.4</td>
+                        <td class="cont">74%</td>
+                    </tr>
+                    <tr>
+                        <td class="cont">Engenharia de Software</td>
+                        <td class="cont">8.2</td>
+                        <td class="cont">82%</td>
+                    </tr>
+                    <tr>
+                        <td class="cont">Física 4</td>
+                        <td class="cont">3.7</td>
+                        <td class="cont">37%</td>
+                    </tr>
+                    <tr>
+                        <td class="cont">Banco de Dados</td>
+                        <td class="cont">6.5</td>
+                        <td class="cont">65%</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </div>  
+    <script src="js/nav.js"></script>
 </body>
 </html>
