--- a/bd.html
+++ b/bd.html
@@ -4,30 +4,73 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/circle.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <title>Study Life</title>
 </head>
 <body>
-            <!--navbar-->
-            <div class="topnav" id="myTopnav">
-                    <a href="index.html" class="navbar-brand"><img src="pict/icon.png" style= "width: 100%;"></a>
-                    <a href="progresso.html">Progresso</a>
-                    <div class="dropdown">
-                        <button class="dropbtn">Disciplinas 
-                            <i class="fa fa-caret-down"></i>
-                        </button>
-                        <div class="dropdown-content">
-                            <a href="mt3.html">Matemática 3</a>
-                            <a href="es.html" >Engenharia de Software</a>
-                            <a href="f4.html">Física 4</a>
-                            <a href="bd.html">Banco de Dados</a>
-                        </div>
-                    </div>
-                    <a href="tarefas.html">Tarefas</a>
-                    <a href="hora.html">Horários</a>
-                    <a href="material.html">Material</a>
-                    <a href="perfil.html">Perfil</a> 
-                    <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+    <div class="container">
+        <!--navbar-->
+        <div class="topnav" id="myTopnav">
+            <a href="index.html" class="navbar-brand"><img src="pict/icon.png" style= "width: 100%;"></a>
+            <a href="index.html">Home</a>
+            <div class="dropdown">
+                <button class="dropbtn">Disciplinas 
+                    <i class="fa fa-caret-down"></i>
+                </button>
+                <div class="dropdown-content">
+                    <a href="mt3.html">Matemática 3</a>
+                    <a href="es.html" >Engenharia de Software</a>
+                    <a href="f4.html">Física 4</a>
+                    <a href="bd.html">Banco de Dados</a>
                 </div>
-                <!--corpo da home-->
+            </div>
+            <a href="progresso.html">Progresso</a>
+            <a href="tarefas.html">Tarefas</a>
+            <a href="hora.html">Horários</a>
+            <a href="material.html">Material</a>
+            <a href="perfil.html">Perfil</a> 
+            <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+        </div>
+        <!--corpo da home-->
+        <div class="corpo w3-container">
+            <h2 style="text-align:center;font-family: sans-serif;">Banco de Dados</h2>
+
+            <h2>Frequência</h2>
+            <div class="w3-light-grey w3-round-xlarge">
+                <div class="w3-container w3-blue w3-round-xlarge" style="width:65%">65%</div>
+            </div>
+            <br>
+            <h2>Dados</h2>
+            <div>
+                <div class="column discnome" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
+                    <h3>Nome</h3>
+                    <h4>Banco de Dados</h4>
+                </div>
+            </div>
+            <div>
+                <div class="column discsigla" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
+                    <h3>Sigla</h3>
+                    <h4>BD</h4>
+                </div>
+            </div>
+            <div>
+                <div class="column discprof" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
+                    <h3>Professor(a)</h3>
+                    <h4>Tiago Moraes</h4>
+                </div>
+            </div>
+            <div>
+                <div class="column discsala" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
+                    <h3>Sala</h3>
+                    <h4>Lab 6</h4>
+                </div>
+            </div>
+        </div>
+        <br>
+        <div style="text-align:center"><a href="matedit.html" class="w3-btn" style="background-color:#81BEF7">Editar</a></div>
+    </div>
+    <script src="js/nav.js"></script>
 </body>
 </html>
