--- a/newt.html
+++ b/newt.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/circle.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <title>Study Life</title>
 </head>
@@ -34,42 +33,24 @@
             <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
         </div>
         <!--corpo da home-->
-        <div class="corpo w3-container">
-            <h2 style="text-align:center">Física 4</h2>
-
-            <h2>Frequência</h2>
-            <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-container w3-blue w3-round-xlarge" style="width:37%">37%</div>
-            </div>
-            <br>
-            <h2>Dados</h2>
-            <div>
-                <div class="column discnome" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
-                    <h3>Nome</h3>
-                    <h4>Física 4</h4>
-                </div>
-            </div>
-            <div>
-                <div class="column discsigla" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
-                    <h3>Sigla</h3>
-                    <h4>Fis4</h4>
-                </div>
-            </div>
-            <div>
-                <div class="column discprof" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
-                    <h3>Professor(a)</h3>
-                    <h4>Camila Gomes</h4>
-                </div>
-            </div>
-            <div>
-                <div class="column discsala" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
-                    <h3>Sala</h3>
-                    <h4>408</h4>
+        <div class="corpo">
+            <div style="margin-left:15%; margin-right:15%">
+                <div class="column" style="background-color:lightgray;width:100%;height:370px">
+                    <label for="">Título</label>
+                    <input type="text" placeholder="Título da tarefa">
+                    <br><br>
+                    <textarea name="descricao" id="desc" cols="30" rows="10"></textarea>
+                    <div style="display:flex;text-align:center;">
+                        <div>
+                            <a href="tarefas.html" class="w3-btn" style="background-color:#084B60;color:white;">Cancelar</a>
+                        </div>
+                        <div>
+                            <a href="tarefas.html" class="w3-btn" style="background-color:#81BEF7;float:right;">Salvar</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-        <br>
-        <div style="text-align:center"><a href="matedit.html" class="w3-btn" style="background-color:#81BEF7">Editar</a></div>
     </div>
     <script src="js/nav.js"></script>
 </body>
