--- a/matedit.html
+++ b/matedit.html
@@ -72,7 +72,7 @@
             </div>
         </div>
         <br>
-        <div style="text-align:center"><a href="list.html" class="w3-btn" style="background-color:#084B60; color:white">Salvar</a></div>
+        <div style="text-align:center"><a href="lista.html" class="w3-btn" style="background-color:#084B60; color:white">Salvar</a></div>
     </div>
     <script src="js/nav.js"></script>
 </body>
