--- a/index.html
+++ b/index.html
@@ -62,5 +62,16 @@
         </div>
     </div>
     <script src="js/nav.js"></script>
+    <script>
+        if (navigator.serviceWorker.controller) {
+            console.log('[PWA Builder] active service worker found, no need to register')
+        } else {
+            navigator.serviceWorker.register('sw.js', {
+                scope: './'
+            }).then(function(reg) {
+                console.log('Service worker has been registered for scope:'+ reg.scope);
+            });
+        }
+    </script>
 </body>
 </html>
